# FlashStudio

./: .gitignore  README.md  README_PYPI.md  pyproject.toml  record_demos.py  workspace
.github/workflows/: ci.yml
.streamlit/: config.toml
data/uploaded/train/: valid
data/voc2012/valid/: _annotations.coco.json
flashstudio/: __init__.py  app.py  constants.py  launcher.py
flashstudio/components/: project_manager.py  sidebar.py  styles.py  wizard.py
flashstudio/components/zone_drawer/: __init__.py  index.html
flashstudio/core/: __init__.py  constants.py
flashstudio/pages/: __init__.py  dashboard.py  data.py  export.py  inference.py  model.py  training.py
flashstudio/pages/dashboard/: __init__.py  _common.py  page.py
flashstudio/pages/data/: __init__.py  _common.py  helpers.py  page.py
flashstudio/pages/export/: __init__.py  page.py
flashstudio/pages/inference/: __init__.py  _common.py  page.py
flashstudio/utils/: __init__.py  config.py  device.py  training_hooks.py
notebooks/: FlashStudio_Inference.ipynb  FlashStudio_Train.ipynb
old_flashstudio/: app.py  cli.py  constants.py
old_flashstudio/components/: sidebar.py
old_flashstudio/utils/: config.py  device.py  filesystem.py  jobs.py
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_constants.py  test_launcher.py  test_pipeline_flow.py  test_save_dir_compat.py
tests/test_components/: __init__.py  test_project_manager.py  test_sidebar.py  test_styles.py  test_wizard.py  test_zone_drawer.py
tests/test_core/: __init__.py  test_constants.py
tests/test_pages/: __init__.py  test_training_parsers.py
tests/test_utils/: __init__.py  test_config.py  test_config_build_apply.py  test_device.py  test_filesystem.py  test_flash_and_mirror.py  test_init.py  test_jobs.py  test_training_hooks.py  test_training_hooks_logic.py
(+151 files in other folders)
