[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashstudio"
version = "0.1.6"
description = "Interactive Training & Inference UI for FlashDet — runs on Google Colab"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Gaurav14cs17"}]
keywords = ["object-detection", "flashdet", "training", "inference", "ui", "colab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.0",
    "pandas>=1.5",
    "pillow>=9.0",
    "numpy>=1.21",
    "pyngrok>=6.0",
    "opencv-python>=4.5",
    "pyyaml>=6.0",
    "flashdet",
]

[project.optional-dependencies]
full = [
    "pyngrok>=6.0",
    "torch>=2.0",
    "opencv-python>=4.5",
    "flashdet[export]",
]
colab = ["pyngrok>=6.0"]
dev = ["ruff", "pytest", "pytest-cov"]

[project.scripts]
flashstudio = "flashstudio.cli:main"

[project.urls]
Homepage = "https://github.com/FlashVision/FlashStudio"
Repository = "https://github.com/FlashVision/FlashStudio"

[tool.setuptools.packages.find]
include = ["flashstudio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E701", "E702", "E741", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["E402", "E741"]
